package contract.enums;

public enum Occupancy {
    WHITE,
    BLACK,
    EMPTY
}
