package main;

public enum Color {
    WHITE,
    BLACK
}
