package main;

public class Coordinates {
    public int x;
    public int y;
}
